tests/miniJava/neg/005181_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] true java ) { return 0 ; } }
